# Indoor-reconstruction-plus-plus

./: .gitignore  CMakeLists.txt  README.md  compile.sh  reconstruction++.cpp
include/: combine_datapackets.h  data_types.h  load_data.h  quaternion_interpolation.h  quaternion_operations.h  reco_types.h  registration.h  registration_estimation.h  transformation.h
interpolation_data_collection/: CMakeLists.txt  interpolation_vlp.cpp
pcd2nicp/: CMakeLists.txt  nicpb2nicp.cpp  pcd2nicp.cpp
plane_distances/: get_plane_distances.cpp
reconstruct/: cmdline.h  load_data.cpp  quaternion_interpolation.cpp  quaternion_interpolation.h  registration.cpp
src/: cmdline.cpp  combine_datapackets.cpp  load_data.cpp  quaternion_interpolation.cpp  quaternion_operations.cpp  registration.cpp  registration_estimation.cpp  transformation.cpp
src/calibration/: CMakeLists.txt  calibration.cpp
src/interpolation_vlp/: CMakeLists.txt  cmdline.cpp  cmdline.hpp  gps_calls.cpp  gps_calls.hpp  imu_calls.cpp  imu_calls.hpp  interpolation_vlp.cpp  ipcon.cpp  ipcon.hpp
src/interpolation_vlp/Tinkerforge/: brick_imu_v2.c  brick_imu_v2.h  bricklet_gps_v2.c  bricklet_gps_v2.h
src/plane_distances/: CMakeLists.txt
src/reconstruct/: CMakeLists.txt  cmdline.cpp  combine_datapackets.cpp  combine_datapackets.h  load_data.cpp  load_data.h  quaternion_interpolation.cpp  quaternion_interpolation.h  reco_types.cpp  reco_types.h  reconstruction++.cpp  registration.cpp  registration.h  registration_estimation.cpp  registration_estimation.h  transformation.cpp  transformation.h
